fix: fix loading page styling issue in dark mode

--- a/src/global.css
+++ b/src/global.css
@@ -30,7 +30,6 @@ html {
 }
 
 body {
-  background-color: #fff;
   color: #172b4d;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif;
